
****  Add error on misused define. [Topa Tota]

****  Add parameter to set maximum signal width, #2082. [Øyvind Harboe]

****  Add warning on genvar in normal for loop, #2143. [yurivict]

****  Fix VPI scope naming for public modules. [Nandu Raj]

****  Fix FST tracing of enums inside structs. [fsiegle]

****  Fix WIDTH warning on </<= of narrower value, #2141. [agrobman]


* Verilator 4.026 2020-01-11

**    Docker images are now available for Verilator releases.

***   Support bounded queues.

***   Support implication operator "|->" in assertions, #2069. [Peter Monsson]

***   Support string compare, ato*, etc methods, #1606. [Yutetsu TAKATSUKASA]

****  Support immediate cover statements.

****  Ignore `uselib to end-of-line, #1634. [Frederic Antonin]

****  Update FST trace API for better performance.

****  Add vpiTimeUnit and allow to specify time as string, #1636. [Stefan Wallentowitz]

****  Add error when `resetall inside module (IEEE 2017-22.3).

****  Add cleaner error on version control conflicts in sources.

****  Fix little endian cell ranges, #1631. [Julien Margetts]

****  Fix queue issues, #1641, #1643. [Peter Monsson, Stefan Wallentowitz]

****  Fix strcasecmp for windows, #1651. [Kuba Ober]

****  Fix disable iff in assertions. Closes #1404. [Peter Monsson]

****  Fix huge case statement performance. Closes #1644. [Julien Margetts]

****  Fix tracing -1 index arrays. Closes #2090. [Yutetsu Takatsukasa]

****  Fix expand optimization slowing --lint-only. Closes #2091. [Thomas Watts]

****  Fix %{number}s with strings. #2093. [agrobman]

****  Fix shebang breaking some shells. Closes #2067. [zdave]


* Verilator 4.024 2019-12-08

**    Support associative arrays (excluding [*] and pattern assignments), #544.

**    Support queues (excluding {} notation and pattern assignments), #545.

***   Add +verilator+error+limit to see more assertion errors. [Peter Monsson]

***   Support string.toupper and string.tolower.

***   Support $rewind and $ungetc.