@@ -34,14 +34,17 @@ module t (/*AUTOARG*/
    input clk;
 
    test_if #( .FOO (identity(5)) ) the_interface ();
+   test_if #( .FOO (identity(7)) ) array_interface [1:0] ();
 
    testmod testmod_i (.clk (clk),
 		      .intf (the_interface),
-                      .intf_no_mp (the_interface)
+                      .intf_no_mp (the_interface),
+                      .intf_array (array_interface)
                       );
 
    localparam THE_TOP_FOO = the_interface.FOO;
    localparam THE_TOP_FOO_BITS = $bits({the_interface.FOO, the_interface.FOO});
+   localparam THE_ARRAY_FOO = array_interface[0].FOO;
 
    initial begin
       if (THE_TOP_FOO != 5) begin
@@ -50,6 +53,10 @@ module t (/*AUTOARG*/
       end
       if (THE_TOP_FOO_BITS != 64) begin
          $display("%%Error: THE_TOP_FOO_BITS = %0d", THE_TOP_FOO_BITS);
+	 $stop;
+      end
+      if (THE_ARRAY_FOO != 7) begin
+         $display("%%Error: THE_ARRAY_FOO = %0d", THE_ARRAY_FOO);
 	 $stop;
       end
    end
@@ -61,11 +68,13 @@ module testmod
   (
    input clk,
    test_if.mp intf,
-   test_if intf_no_mp
+   test_if intf_no_mp,
+   test_if.mp intf_array [1:0]
    );
 
    localparam THE_FOO = intf.FOO;
    localparam THE_OTHER_FOO = intf_no_mp.FOO;
+   localparam THE_ARRAY_FOO = intf_array[0].FOO;
 
    always @(posedge clk) begin
       if (THE_FOO != 5) begin
@@ -76,12 +85,20 @@ module testmod
          $display("%%Error: THE_OTHER_FOO = %0d", THE_OTHER_FOO);
          $stop;
       end
+      if (THE_ARRAY_FOO != 7) begin
+         $display("%%Error: THE_ARRAY_FOO = %0d", THE_ARRAY_FOO);
+         $stop;
+      end
       if (intf.FOO != 5) begin
          $display("%%Error: intf.FOO = %0d", intf.FOO);
 	 $stop;
       end
       if (intf_no_mp.FOO != 5) begin
          $display("%%Error: intf_no_mp.FOO = %0d", intf_no_mp.FOO);
+         $stop;
+      end
+      if (intf_array[0].FOO != 7) begin
+         $display("%%Error: intf_array[0].FOO = %0d", intf_array[0].FOO);
          $stop;
       end
       //      if (i.getFoo() != 5) begin
